auth management (create user for login and log the login)
